Add games managing with REST

--- a/GameServer/appsettings.json
+++ b/GameServer/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
@@ -12,5 +12,9 @@
         "Url": "http://+:8080"
       }
     }
+  },
+
+  "GameServer": {
+    "AppToken": "app-secret"
   }
 }
