--- a/GameServer/GameServer.csproj
+++ b/GameServer/GameServer.csproj
@@ -14,5 +14,9 @@
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="10.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Model\.tmp\" />
+  </ItemGroup>
 </Project>
 
